# Image_Stitching

./: .gitignore  README.md
OBJ-GSP/: CMakeLists.txt  Configure.h  main.cpp
OBJ-GSP/.ipynb_checkpoints/: main-checkpoint.cpp
OBJ-GSP/Feature/: MultiImage.cpp  MultiImages.h
OBJ-GSP/Feature/.ipynb_checkpoints/: ImageData-checkpoint.cpp  ImageData-checkpoint.h
OBJ-GSP/Util/: EdgeDetection.cpp  Thin.h
efficientloftr/: extract.py  extract_before4K.py  visualize.py
efficientloftr/.ipynb_checkpoints/: extract-checkpoint.py  text-checkpoint.py
efficientloftr/notebooks/: demo_single_pair01.ipynb
